# GIFTs

./: .gitignore  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
demo/: README.md  aerodromes.db  aerodromes.win.db  demo1.py  iwxxmd.cfg  iwxxmd.py  metars.txt  swa.txt  tafs.txt  tca.txt  vaa.txt
gifts/: METAR.py  SWA.py  TAF.py  TCA.py  VAA.py  __init__.py  metarDecoder.py  metarEncoder.py  swaDecoder.py  swaEncoder.py  tafDecoder.py  tafEncoder.py  tcaDecoder.py  tcaEncoder.py  vaaDecoder.py  vaaEncoder.py
gifts/common/: Common.py  Encoder.py  bulletin.py  tpg.py  xmlConfig.py  xmlUtilities.py
gifts/data/: codes.wmo.int-49-2-AerodromePresentOrForecastWeather.rdf
gifts/database/: README.md  README.txt  create_pickle_db.py
src/gifts/: TAF.py  tafDecoder.py  tafEncoder.py  tcaDecoder.py  tcaEncoder.py  vaaDecoder.py  vaaEncoder.py
src/gifts/common/: Encoder.py
src/gifts/database/: aerodromes.tbl
srcs/validation/: README.txt  checkGMLReferences.py  ignoredURLs.txt  iwxxmValidator.py
tests/: test_bulletin.py  test_metar_encoding.py  test_swa_encoding.py  test_taf_encoding.py  test_tca_encoding.py  test_vaa_encoding.py
validation/: README.md  README.txt  catalog-2023-1.xml  catalog.template.xml  checkGMLReferences.py  codeListsToSchematron.py  ignoredURLs.txt  iwxxmValidator.py
