[metadata]
name = gifts
description = IWXXM encoders for Annex3 TAC products
author = Mark Oberfield - NOAA/NWS/OSTI/MDL/WIAD
author_email = Mark.Oberfield@noaa.gov
maintainer = Mark Oberfield
version = 1.0.0
classifiers = Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Text Processing :: Markup :: XML
    License :: Public Domain

license_file = LICENSE.md

[options]
include_package_data = true
packages = find:
python_requires = >=2.7
zip_safe = false
install_requires = skyfield >=1.18,<2a0

[options.packages.find]
exclude = tests

[options.extras_require]
test =
    flake8>=3.7,<4a0
    pytest>=4.6,<5a0
    pytest-cov>=2.7,<3a0

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose

[flake8]
max-line-length = 120
